# simplex-primal

./: LICENSE  README.md  pyproject.toml
simplex_primal/: __init__.py  core.py
